# migrator

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml  release.yml
dev/: help.mk
dev/compose/: db.yaml
dev/docker/: Dockerfile  entrypoint
dev/licenses/: rules.yml
migrator/: __init__.py  manage.py
migrator/templates/: create_service.py.jinja
