[project]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
authors = [{name = "George Messiha", email = "georgemessiha22@gmail.com"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.poetry]
version = "0.1.0"
name = "migrator"
authors = ["George Messiha <georgemessiha22@gmail.com>"]
description = "Migrator is a sidecar to handle migrations"

[tool.poetry.scripts]
migrator = "migrator.manage:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipython = "^8.14.0"

[tool.poetry.dependencies]
python = "^3.11"
yoyo-migrations = "^8.2.0"
psycopg2 = "^2.9.6"
jinja2 = "^3.1.2"
click = "^8.1.5"

[build-system]
requires = ["poetry-core", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"
